<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Search_Form" >

    <LinearLayout
        android:id="@+id/frame_specific"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_requirement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/color_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/color_array"
            android:prompt="@string/color" />

        <Spinner
            android:id="@+id/level_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/level_array"
            android:prompt="@string/level" />

        <EditText
            android:id="@+id/cost_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cost"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_damage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/power_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/power"
            android:inputType="number" />

        <Spinner
            android:id="@+id/soul_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/soul_array"
            android:prompt="@string/soul" />

        <Spinner
            android:id="@+id/trigger_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/trigger_array"
            android:prompt="@string/trigger" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_general"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/trait_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/trait" />

        <Spinner
            android:id="@+id/classification_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/classification_array"
            android:prompt="@string/classification" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_ability"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/ability_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/ability" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" 
            android:onClick="searchQuery"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" android:onClick="clearAll"/>
    </LinearLayout>

</LinearLayout>